# Savitzky-Golay

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  example.cpp  savgol.cpp  vander.cpp
examples/: main.cpp  main.h
include/: rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  savgol.h  vander.h  vander_initialize.h  vander_terminate.h  vander_types.h
src/: rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  vander.cpp  vander_initialize.cpp  vander_terminate.cpp
